tests/snapshots/test_examples__success__safety1.fly.cvc4.snap
---
source: tests/test_examples.rs
expression: combined_stdout_stderr
---
verifies!

======== STDERR: ===========

