tests/snapshots/test_examples__success__safety1.fly.houdini.z3.snap
---
source: tests/test_examples.rs
expression: combined_stdout_stderr
---
Running Houdini, candidate invariants are:
    !q & !p

Checking initiation:
    Checking !q & !p
Candidate invariants are:
    !q & !p

Computing fixed point:
    Checking !q & !p
Fixed point reached
verifies!

======== STDERR: ===========

