tests/snapshots/test_examples__success__safety2.fly.houdini.1.z3.snap
---
source: tests/test_examples.rs
expression: combined_stdout_stderr
---
Running Houdini, candidate invariants are:
    x
    y
    z

Checking initiation:
    Checking x
    Checking y
    Checking z
Candidate invariants are:
    x
    y
    z

Computing fixed point:
    Checking x
    Checking y
    Checking z
Fixed point reached
verifies!

======== STDERR: ===========

