tests/snapshots/test_examples__success__safety3.fly.houdini.z3.snap
---
source: tests/test_examples.rs
expression: stdout
---
Running Houdini, candidate invariants are:
    x
    y

Checking initiation:
    Checking x
    Checking y
Candidate invariants are:
    x
    y

Computing fixed point:
    Checking x
    Checking y
Fixed point reached
verifies!

